-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
Fully Compatible
-
ALL
-
Security 2020-06-29, Security 2020-07-13
-
None
-
None
-
None
-
None
-
None
-
None
-
None
If a fork() child of a death test fails due to a thread sanitizer failure, it is only detected as a failure due to SERVER-48661.
Since tests are typically run as follows:
TSAN_OPTIONS="suppressions=etc/tsan.suppressions:halt_on_error=1" ./cpp_unit_test
we should instead assert the child exit code is not 66 (default TSAN exit code).
- related to
-
SERVER-119430 update process exit codes in servers.js to match exit_code.h
-
- Closed
-