SERVER-48887 C++ death tests should fail on TSAN exit code